kubernetes/50-todo-backend/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: todo-backend
  labels:
    istio-injection: enabled
