kubernetes/50-todo-backend/todo-logging-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-logging-capability
  labels:
    app: logging-capability
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logging-capability
  template:
    metadata:
      labels:
        app: logging-capability
    spec:
      containers:
        - name: wasmcloud
          image: eu.gcr.io/wasmcloud-k8s-demo/wasmcloud:0.18.2-debug
          imagePullPolicy: Always
          args: ["--manifest=/etc/manifest/manifest.yaml"]
          volumeMounts:
            - name: manifest
              mountPath: "/etc/manifest"
              readOnly: true
      volumes:
        - name: manifest
          configMap:
            name: manifest-logging-capability
