kubernetes/50-todo-backend/todo-http-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-http-capability
  namespace: todo-backend
  labels:
    app: http-capability
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-capability
  template:
    metadata:
      labels:
        app: http-capability
    spec:
      containers:
        - name: wasmcloud
          image: eu.gcr.io/wasmcloud-k8s-demo/wasmcloud:0.18.2-debug
          imagePullPolicy: Always
          args: ["--manifest=/etc/manifest/manifest.yaml"]
          volumeMounts:
            - name: manifest
              mountPath: "/etc/manifest"
              readOnly: true
          ports:
            - containerPort: 8082
          livenessProbe:
            exec:
              command:
              - bash
              - -c
              - "NATS_URL=$KVCACHE_NATS_URL nats pub devnull 'just a liveness test'"
          readinessProbe:
            exec:
              command:
              - bash
              - -c
              - "NATS_URL=$KVCACHE_NATS_URL nats pub devnull 'just a readiness test'"
      volumes:
        - name: manifest
          configMap:
            name: manifest-http-capability
---
apiVersion: v1
kind: Service
metadata:
  name: todo-http-capability-service
spec:
  selector:
    app: http-capability
  ports:
    - protocol: TCP
      name: http
      port: 8082
      targetPort: 8082
