kubernetes/50-todo-backend/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: todo-backend
spec:
  backend:
    serviceName: todo-http-capability-service
    servicePort: 8082
